// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. renders correctly 1`] = `
Array [
  <div />,
  <div>
    <nav
      data-cy="topic-tags"
    >
      <ArticleTopics />
    </nav>
  </div>,
  <div
    id="related-articles"
  >
    <RelatedArticles
      isVisible={true}
    />
  </div>,
  <div
    id="sponsored-article-container"
  >
    <div
      id="sponsored-article"
    />
  </div>,
  <ArticleComments
    articleId="dummy-article-id"
    isEnabled={true}
    spotAccountId="dummy-spot-id"
  />,
]
`;

exports[`2. renders correctly with newskit 1`] = `
Array [
  <div />,
  <div>
    <nav
      data-cy="topic-tags"
    >
      <ul>
        <li>
          <a
            href="/topic/football"
            size="medium"
          >
            Football
          </a>
        </li>
        <li>
          <a
            href="/topic/manchester-united"
            size="medium"
          >
            Manchester United FC
          </a>
        </li>
        <li>
          <a
            href="/topic/chelsea"
            size="medium"
          >
            Chelsea FC
          </a>
        </li>
        <li>
          <a
            href="/topic/arsenal"
            size="medium"
          >
            Arsenal
          </a>
        </li>
        <li>
          <a
            href="/topic/rugby-union"
            size="medium"
          >
            Rugby Union
          </a>
        </li>
      </ul>
    </nav>
  </div>,
  <div
    id="related-articles"
  >
    <RelatedArticles
      isVisible={true}
    />
  </div>,
  <div
    id="sponsored-article-container"
  >
    <div
      id="sponsored-article"
    />
  </div>,
  <ArticleComments
    articleId="dummy-article-id"
    isEnabled={true}
    spotAccountId="dummy-spot-id"
  />,
]
`;

exports[`3. no related articles, topics and comments when user not logged in, only sponsored div 1`] = `
<div
  id="sponsored-article-container"
>
  <div
    id="sponsored-article"
  />
</div>
`;
